# buzz

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN_DECISIONS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
scoop/: buzz.json
src/: args.rs  awake.rs  job.rs  main.rs  process.rs  simulate.rs
tests/: integration.rs
winget/: mahajandhruv26.buzz.yaml
