[package]
name = "buzz"
version = "1.0.0"
edition = "2021"
description = "A Windows caffeinate alternative — prevent sleep, keep display/system awake"
license = "MIT"
repository = "https://github.com/mahajandhruv26/buzz"
keywords = ["caffeinate", "sleep", "awake", "windows", "power"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
ctrlc = "3.4"
